Added map view using OpenMapStreet, and also the ability to see the S.P.E.C.I.A.L's of the user using the software.